[metadata]
name = hourly
version = 0.2.1
author = Asher Pembroke
author_email = apembroke@gmail.com
description = A simple git-based hour tracking tool
url = https://github.com/asherp/hourly
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.6
	Operating System :: OS Independent
	License :: OSI Approved :: Apache Software License
license = Apache License Version 2.0

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  pandas
  gitpython
  plotly
  hydra-core

[options.entry_points]
console_scripts =
    hourly = cli.main:entry
    ; hourly = hourly.hourly:cli
    hourly-in = cli.main:hourly_in
    hourly-out = cli.main:hourly_out

